--- a/css/main.css
+++ b/css/main.css
@@ -207,6 +207,8 @@ body {
     background: rgba(0, 0, 0, 0.13);
     height: 1.288em;
     width: 1.288em;
+    box-shadow: 0 0.154em 0.192em -0.096em rgba(0,0,0,.2), 0 0.308em 0.462em 0.038em rgba(0,0,0,.14), 0 0.115em 0.577em 0.096em rgba(0,0,0,.12);
+    /*box-shadow: 0 8px 10px -5px rgba(0,0,0,.2), 0 16px 24px 2px rgba(0,0,0,.14), 0 6px 30px 5px rgba(0,0,0,.12);*/
     /*Additional effects*/
     /*box-shadow: 0px 0.077em 0.077em rgba(0, 0, 0, 0.25);*/   /*box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);*/
 }
@@ -215,6 +217,8 @@ body {
     background: rgba(0, 0, 0, 0.37);
     box-shadow: 0 0.077em 0.077em Dodgerblue;    /*box-shadow: 0px 4px 4px Dodgerblue;*/
     border: 0.019em solid Dodgerblue;            /*border: 1px solid Dodgerblue;*/
+    transition: 0.2s;
+    box-shadow: 0 0.154em 0.192em -0.096em rgba(30,144,225,.2), 0 0.308em 0.462em 0.038em rgba(30,144,225,.14), 0 0.115em 0.577em 0.096em rgba(30,144,225,.12);
     /*Additional effects*/
     /*transition: 0.3s;*/
 }
@@ -242,17 +246,19 @@ body {
     align-items: center;
     visibility: hidden;
     opacity: 0.1;
-    max-width: 10.625rem;        /*max-width: 170px;*/
+    max-width: 11rem;        /*max-width: 170px;*/
     background-color: #000000;
     background: linear-gradient(0deg, #297acf , #000000 55%,  #000000);
     color: white;
     border-radius: 0.375rem;     /*border-radius: 6px;*/
-    padding: 0.3125rem 0.625rem;    /*padding: 5px 10px;*/
+    padding: 0.5rem 0.825rem;
     position: absolute;
     bottom: 125%;
     right: 0;
-
+    box-shadow: 0 0.154em 0.192em -0.096em rgba(0,0,0,.2), 0 0.308em 0.462em 0.038em rgba(0,0,0,.14), 0 0.115em 0.577em 0.096em rgba(0,0,0,.12);
     /*Additional effects*/
+    /*box-shadow: 0 0.154em 0.192em -0.096em rgba(30,144,225,.2),*/
+    /*0 0.308em 0.462em 0.038em rgba(30,144,225,.14), 0 0.115em 0.577em 0.096em rgba(30,144,225,.12);*/
     /*text-align: center;*/
     /*color: Dodgerblue;*/
 }
@@ -269,13 +275,13 @@ body {
 /*}*/
 /******* Alternative on hover css */
 .mailing-address__txt {
-    width: 9.900rem;    /*width: 158px;*/
+    width: 10rem;    /*width: 158px;*/
     padding: 0 0.1875rem;    /*padding: 0 3px;*/
     border: 0.0625rem solid Dodgerblue;   /*border: 1px solid Dodgerblue;*/
     color: black;
 }
 .mailing-address__tooltip {
-    margin-top: 0.25rem;    /*margin-top: 4px;*/
+    margin-top: 0.55rem;
 }
 .mail .mail__tooltip::after {
     content: "";
